[package]
name = "cnmaestro_meta_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
